site: multiplatform - extensive list of supported features

--- a/scalus-site/content/multiplatform.mdx
+++ b/scalus-site/content/multiplatform.mdx
@@ -1,28 +1,29 @@
 ---
-title: Multiplatform Support - JVM, JavaScript/Typescript, Native
+title: Scalus Multiplatform - Cardano on JVM, JavaScript, and Native
 sidebarTitle: Multiplatform
-description: Scalus runs on JVM, JavaScript/Typescript (Node.js/browser), and Native platforms. Build Cardano smart contracts and offchain code that compiles to any target from the same Scala 3 codebase.
+description: Scalus runs on JVM, JavaScript/TypeScript (Node.js/browser), and Native platforms. Build Cardano smart contracts and offchain code that compiles to any target from the same Scala 3 codebase.
 ---
 
 import { Callout } from 'nextra/components'
 
-# Multiplatform Support
+# Scalus Multiplatform — Cardano on JVM, JavaScript, and Native
 
-Scalus compiles to **JVM**, **JavaScript**/**Typescript**, and **Native** from the same Scala 3 codebase. Write once, deploy anywhere — from server-side backends to browser wallets to CLI tools.
+Scalus compiles to **JVM**, **JavaScript**/**TypeScript**, and **Native** from the same Scala 3 codebase. Write once, deploy anywhere — from server-side backends to browser wallets to CLI tools.
 
 ## Platform Support Matrix
 
 | Feature | JVM | JS/TS | Native |
 |---------|:---:|:-----:|:------:|
-| Plutus VM | ✓ | ✓ | ✓ |
-| UPLC | ✓ | — | — |
-| [SIR compiler](/docs/smart-contracts/optimisations/sir) | ✓ | — | — |
-| [Standard library](/docs/language-guide) | ✓ | ✓ | ✓ |
+| Smart contracts / UPLC | ✓ (Scala) | — | — |
+| [SIR compiler](/docs/smart-contracts/optimisations/sir) | ✓ (Scala) | — | — |
+| [Standard library](/docs/language-guide) | ✓ | ✓ (Off-chain) | ✓ (Off-chain) |
 | [Transaction builder](/docs/transactions) | ✓ | ✓ | — |
-| [Ledger Framework](/docs/ledger/ledger-rules) | ✓ | ✓ | — |
+| Script evaluation / Cost calculation | ✓ | ✓ | — |
+| Plutus VM | ✓ | ✓ | ✓ |
+| [Ledger Rules / Framework](/docs/ledger/ledger-rules) | ✓ | ✓ | — |
+| [Testing utilities ](/docs/testing) | ✓ | ✓ | ✓ |
 | [Emulator](/docs/testing/emulator) | ✓ | [✓](/docs/testing/js-emulator) | — |
 | [Yaci DevKit](/docs/testing/local-devnet) | ✓ | — | — |
-| Testing utilities | ✓ | ✓ | — |
 | Ed25519 signatures | ✓ | ✓ | ✓ |
 | ECDSA secp256k1 | ✓ | ✓ | ✓ |
 | Schnorr signatures | ✓ | ✓ | ✓ |
@@ -42,9 +43,9 @@ The JVM platform provides the complete Scalus stack:
 
 **Best for:** Backend services, full DApp development, integration testing, production deployments.
 
-### JavaScript/Typescript — Offchain & Browser
+### JavaScript/TypeScript — Offchain & Browser
 
-JavaScript/Typescript enables Scalus in Node.js and browser environments:
+JavaScript/TypeScript enables Scalus in Node.js and browser environments:
 
 - **Script evaluation** — Run Plutus V1/V2/V3 scripts
 - **Transaction building** — Construct and sign transactions
