--- a/scalus-site/content/security/index.mdx
+++ b/scalus-site/content/security/index.mdx
@@ -71,6 +71,7 @@ Security is not optional in smart contract development. Study [common vulnerabil
 ## Resources
 
 - [Common Plutus Vulnerabilities](/docs/security/common-vulnerabilities) - Known vulnerability patterns and mitigations
+- [Scalus Testkit](/docs/testing/testkit) - Boundary testing and attack simulation for smart contracts
 - [Scalus Testing Guide](/docs/testing/unit-testing) - Learn to test your validators thoroughly
 - [Scalus Examples](https://github.com/scalus3/scalus/tree/master/scalus-examples) - Study production validator patterns
 - [Plutonomicon Vulnerabilities](https://github.com/Plutonomicon/plutonomicon/blob/main/vulnerabilities.md) - Original vulnerability documentation
